--- a/.gitignore
+++ b/.gitignore
@@ -30,127 +30,4 @@
 *.exe
 *.out
 *.app
-build/ALL_BUILD.vcxproj
-build/ALL_BUILD.vcxproj.filters
-build/chat.sln
-build/chat.vcxproj
-build/chat.vcxproj.filters
-build/chatConfig.cmake
-build/chatTargets.cmake
-build/cmake_install.cmake
-build/CMakeCache.txt
-build/install_manifest.txt
-build/INSTALL.vcxproj
-build/INSTALL.vcxproj.filters
-build/ZERO_CHECK.vcxproj
-build/ZERO_CHECK.vcxproj.filters
-build/CMakeFiles/cmake.check_cache
-build/CMakeFiles/CMakeError.log
-build/CMakeFiles/CMakeOutput.log
-build/CMakeFiles/generate.stamp
-build/CMakeFiles/generate.stamp.depend
-build/CMakeFiles/generate.stamp.list
-build/CMakeFiles/TargetDirectories.txt
-build/CMakeFiles/02ad78723408172095678f625e305b5a/INSTALL_force.rule
-build/CMakeFiles/3.16.1/CMakeCCompiler.cmake
-build/CMakeFiles/3.16.1/CMakeCXXCompiler.cmake
-build/CMakeFiles/3.16.1/CMakeDetermineCompilerABI_C.bin
-build/CMakeFiles/3.16.1/CMakeDetermineCompilerABI_CXX.bin
-build/CMakeFiles/3.16.1/CMakeRCCompiler.cmake
-build/CMakeFiles/3.16.1/CMakeSystem.cmake
-build/CMakeFiles/3.16.1/VCTargetsPath.txt
-build/CMakeFiles/3.16.1/VCTargetsPath.vcxproj
-build/CMakeFiles/3.16.1/CompilerIdC/CMakeCCompilerId.c
-build/CMakeFiles/3.16.1/CompilerIdC/CompilerIdC.vcxproj
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.exe.recipe
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/vcpkg.applocal.log
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.tlog/CL.command.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.tlog/CL.read.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.tlog/CL.write.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.tlog/CompilerIdC.lastbuildstate
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.tlog/CompilerIdC.write.1u.tlog
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.tlog/link.command.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.tlog/link.read.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdC/Debug/CompilerIdC.tlog/link.write.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdCXX/CMakeCXXCompilerId.cpp
-build/CMakeFiles/3.16.1/CompilerIdCXX/CompilerIdCXX.vcxproj
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.exe.recipe
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/vcpkg.applocal.log
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CL.command.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CL.read.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CL.write.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CompilerIdCXX.lastbuildstate
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/CompilerIdCXX.write.1u.tlog
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.command.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.read.1.tlog
-build/CMakeFiles/3.16.1/CompilerIdCXX/Debug/CompilerIdCXX.tlog/link.write.1.tlog
-build/CMakeFiles/3.16.1/x64/Debug/VCTargetsPath.recipe
-build/CMakeFiles/3.16.1/x64/Debug/VCTargetsPath.tlog/VCTargetsPath.lastbuildstate
-build/CMakeFiles/61a2b8c256ba4c2a618599f77ad5bdd0/INSTALL_force.rule
-build/CMakeFiles/743c61a1111f2bb52df2c0a7cdcd274c/generate.stamp.rule
-build/CMakeFiles/743c61a1111f2bb52df2c0a7cdcd274c/INSTALL_force.rule
-build/CMakeFiles/Export/D_/usr/lib/cmake/chat/chatTargets-debug.cmake
-build/CMakeFiles/Export/D_/usr/lib/cmake/chat/chatTargets-minsizerel.cmake
-build/CMakeFiles/Export/D_/usr/lib/cmake/chat/chatTargets-release.cmake
-build/CMakeFiles/Export/D_/usr/lib/cmake/chat/chatTargets-relwithdebinfo.cmake
-build/CMakeFiles/Export/D_/usr/lib/cmake/chat/chatTargets.cmake
-build/Debug/chat_d.pdb
-build/chat.dir/Debug/chat_d.lib.recipe
-build/chat.dir/Debug/vcpkg.applocal.log
-build/chat.dir/Debug/chat.tlog/chat.lastbuildstate
-build/chat.dir/Debug/chat.tlog/chat.write.1u.tlog
-build/chat.dir/Debug/chat.tlog/CL.command.1.tlog
-build/chat.dir/Debug/chat.tlog/CL.read.1.tlog
-build/chat.dir/Debug/chat.tlog/CL.write.1.tlog
-build/chat.dir/Debug/chat.tlog/CustomBuild.command.1.tlog
-build/chat.dir/Debug/chat.tlog/CustomBuild.read.1.tlog
-build/chat.dir/Debug/chat.tlog/CustomBuild.write.1.tlog
-build/chat.dir/Debug/chat.tlog/Lib-link.read.1.tlog
-build/chat.dir/Debug/chat.tlog/Lib-link.write.1.tlog
-build/chat.dir/Debug/chat.tlog/Lib.command.1.tlog
-build/test/cmake_install.cmake
-build/test/INSTALL.vcxproj
-build/test/INSTALL.vcxproj.filters
-build/test/CMakeFiles/generate.stamp
-build/test/CMakeFiles/generate.stamp.depend
-build/test/chat_server/ALL_BUILD.vcxproj
-build/test/chat_server/ALL_BUILD.vcxproj.filters
-build/test/chat_server/chat_server.sln
-build/test/chat_server/chat_server.vcxproj
-build/test/chat_server/chat_server.vcxproj.filters
-build/test/chat_server/cmake_install.cmake
-build/test/chat_server/INSTALL.vcxproj
-build/test/chat_server/INSTALL.vcxproj.filters
-build/test/chat_server/CMakeFiles/generate.stamp
-build/test/chat_server/CMakeFiles/generate.stamp.depend
-build/test/chat_server/Debug/chat_server.pdb
-build/test/chat_server/chat_server.dir/Debug/chat_server.exe.recipe
-build/test/chat_server/chat_server.dir/Debug/chat_server.ilk
-build/test/chat_server/chat_server.dir/Debug/vc142.pdb
-build/test/chat_server/chat_server.dir/Debug/vcpkg.applocal.log
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/chat_server.lastbuildstate
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/chat_server.write.1u.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/CL.command.1.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/CL.read.1.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/CL.write.1.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/CustomBuild.command.1.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/CustomBuild.read.1.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/CustomBuild.write.1.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/link.command.1.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/link.read.1.tlog
-build/test/chat_server/chat_server.dir/Debug/chat_server.tlog/link.write.1.tlog
-build/x64/Debug/ALL_BUILD/ALL_BUILD.recipe
-build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/ALL_BUILD.lastbuildstate
-build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.command.1.tlog
-build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.read.1.tlog
-build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.write.1.tlog
-build/x64/Debug/INSTALL/INSTALL.recipe
-build/x64/Debug/INSTALL/INSTALL.tlog/CustomBuild.command.1.tlog
-build/x64/Debug/INSTALL/INSTALL.tlog/CustomBuild.read.1.tlog
-build/x64/Debug/INSTALL/INSTALL.tlog/CustomBuild.write.1.tlog
-build/x64/Debug/INSTALL/INSTALL.tlog/INSTALL.lastbuildstate
-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.recipe
-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.command.1.tlog
-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.read.1.tlog
-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.write.1.tlog
-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
+build/*
